<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:toggle="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/login_bg"
                android:fillViewport="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

    <include layout="@layout/toolbar_new"
             android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/called_et_layout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_icon_margintop"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title_tv"
                android:textSize="@dimen/dp_28"
                android:textColor="@color/activity_login_title_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_frist_title_tv"
                android:textSize="@dimen/dp_28"
                android:textColor="@color/activity_login_title_tv"/>

            <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_second_title_tv"
                android:textSize="@dimen/dp_18"
                android:textColor="@color/activity_login_title_tv"/>
        </LinearLayout>






        </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/dp_40"
        >

        <TextView
            android:id="@+id/verson"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="v1.0.0"
            android:textSize="@dimen/dp_18"
            android:textColor="@color/activity_login_title_tv"/>
    </LinearLayout>



</RelativeLayout>

